--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,21 @@
 plugins { id 'com.android.application'; id 'org.jetbrains.kotlin.android' }
-android { namespace "com.universal.app"; compileSdk 34; defaultConfig { applicationId "com.universal.app"; minSdk 24; targetSdk 34; versionCode 1; versionName "1.0" } }
-dependencies { implementation 'androidx.appcompat:appcompat:1.6.1'; implementation 'androidx.core:core-ktx:1.12.0' }
+android { 
+    namespace "com.universal.app"
+    compileSdk 34 
+    defaultConfig { 
+        applicationId "com.universal.app"
+        minSdk 24 
+        targetSdk 34 
+        versionCode 1 
+        versionName "1.0" 
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+        }
+    }
+}
+dependencies { 
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.core:core-ktx:1.12.0' 
+}
