--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
-plugins { id 'com.android.application'; id 'org.jetbrains.kotlin.android' }
+plugins { 
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android' 
+}
 android { 
     namespace "com.universal.app"
     compileSdk 34 
