--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,13 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      # Gradle 8.4 Kurulumu (Sistemdeki 9.x sürümünü bypass eder)
+      - name: Setup Gradle
+        if: hashFiles('**/pubspec.yaml') == ''
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 8.4
+
       # Flutter tespiti ve derlemesi
       - name: Setup Flutter
         if: hashFiles('**/pubspec.yaml') != ''
@@ -26,17 +33,10 @@ jobs:
           flutter pub get
           flutter build apk --release
 
-      # Android derlemesi - Gradle 8.4 Wrapper kullanımı
-      - name: Android Build (Gradle)
+      # Android derlemesi
+      - name: Android Build
         if: hashFiles('**/pubspec.yaml') == ''
-        run: |
-          # Eğer gradlew yoksa gradle wrapper komutu ile oluşturmayı dene (Sistem gradle 9 olsa da wrapper 8.4 oluşturur)
-          if [ ! -f gradlew ]; then
-            echo "Gradle Wrapper oluşturuluyor..."
-            gradle wrapper --gradle-version 8.4
-          fi
-          chmod +x gradlew
-          ./gradlew assembleDebug --no-daemon
+        run: gradle assembleDebug --no-daemon
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
