--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,13 @@ android {
             minifyEnabled false
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 }
 dependencies { 
     implementation 'androidx.appcompat:appcompat:1.6.1'
