🚀 Build Trigger: Universal APK Generation

--- a/app/src/main/assets/www/package.json
+++ b/app/src/main/assets/www/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finans---banka-ve-taksit-takip-uygulaması",
+  "name": "i̇nşaat-maliyet-hesaplayıcı",
   "private": true,
   "version": "0.0.0",
   "type": "module",
