--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <application android:label="My Awesome App" android:theme="@style/Theme.AppCompat.NoActionBar" android:hardwareAccelerated="true">
+    <application 
+        android:label="My Awesome App" 
+        android:theme="@style/Theme.AppCompat.NoActionBar" 
+        android:hardwareAccelerated="true"
+        android:usesCleartextTraffic="true">
         <activity android:name=".MainActivity" android:exported="true" android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
