--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,13 @@ jobs:
         with:
           flutter-version: '3.16.0'
           channel: 'stable'
+          cache: true
+      - name: Configure Local Properties
+        run: echo "flutter.sdk=$FLUTTER_ROOT" > android/local.properties
       - name: Install dependencies
         run: flutter pub get
       - name: Build APK
-        run: flutter build apk --debug
+        run: flutter build apk --debug --no-pub
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
