--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,30 @@
-name: Build Flutter APK
+name: Build Native Android APK
 on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: set up JDK 17
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.16.0'
-          channel: 'stable'
-          cache: true
-      - name: Configure Local Properties
-        run: echo "flutter.sdk=$FLUTTER_ROOT" > android/local.properties
-      - name: Install dependencies
-        run: flutter pub get
-      - name: Build APK
-        run: flutter build apk --debug
+          cache: gradle
+
+      - name: Ensure gradlew exists and is executable
+        run: |
+          if [ ! -f "gradlew" ]; then
+            echo '#!/bin/sh' > gradlew
+            echo 'gradle "$@"' >> gradlew
+          fi
+          chmod +x gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew :app:assembleDebug --stacktrace
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
-          path: build/app/outputs/flutter-apk/app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
