--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,23 @@
-plugins { 
+plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android' 
+    id 'org.jetbrains.kotlin.android'
 }
-android { 
-    namespace "com.universal.app"
-    compileSdk 34 
-    defaultConfig { 
-        applicationId "com.universal.app"
-        minSdk 24 
-        targetSdk 34 
-        versionCode 1 
-        versionName "1.0" 
+
+android {
+    namespace "com.evrensel.android.app"
+    compileSdk 34
+
+    defaultConfig {
+        applicationId "com.evrensel.android.app"
+        minSdk 24
+        targetSdk 34
+        versionCode 1
+        versionName "1.0"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -25,9 +31,27 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.11'
+    }
+    packaging {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
-dependencies { 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.webkit:webkit:1.9.0'
+
+dependencies {
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.0'
+    implementation 'androidx.activity:activity-compose:1.9.0'
+    implementation platform('androidx.compose:compose-bom:2024.05.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.webkit:webkit:1.11.0'
 }
