--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,3 @@
-
 pluginManagement {
     repositories {
         google()
@@ -13,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "My Awesome App"
+rootProject.name = "Harika Uygulamam"
 include ':app'
